# HeAgent

./: .dockerignore  .env.example  .env.production.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.claude/reviews/: full-codebase-2026-07-20.md  last-10-commits-2026-07-20.md  local-sandbox-cli-default-2026-07-20.md
.claude/skills/bmad-advanced-elicitation/: methods.csv
.claude/skills/bmad-agent-architect/: customize.toml
.claude/skills/bmad-agent-builder/: SKILL.md  customize.toml
.claude/skills/bmad-architecture/: SKILL.md  customize.toml
.claude/skills/bmad-bmb-setup/: SKILL.md
.claude/skills/bmad-brainstorming/: SKILL.md  customize.toml
.claude/skills/bmad-code-review/: SKILL.md
.claude/skills/bmad-create-architecture/: SKILL.md
.claude/skills/bmad-create-story/: SKILL.md
.claude/skills/bmad-help/: SKILL.md
.github/workflows/: ci.yml  codeql.yml
_bmad/: config.toml  config.user.toml
_bmad-output/: README.md  retrospective-all-cycles.md
_bmad-output/baseline/: architecture.md  epics-self-learning.md  epics.md  prd.md  sprint-status.yaml
_bmad-output/gui/: architecture.md  brief.md  epics.md  prd.md  sprint-status.yaml
_bmad-output/implementation/: 5-1-subagent-context-injection.md  epic-5-context.md  p0-provider-hardening.md
_bmad-output/implementation-artifacts/: 3-3-token-counter.md  deferred-work.md  p0-hardening-review-diff.txt  spec-5-1-subagent-context-injection.md  spec-p0-provider-hardening.md
_bmad-output/mcp-client/: architecture.md  brief.md  epics-integration.md  epics-mcp-client.md  prd-decision-log.md  prd.md  retrospective-epic-13.md
_bmad-output/mcp-client-v2/: .memlog.md  ARCHITECTURE-SPINE.md  brief.md  epics.md  prd.md  review-rubric.md  sprint-status.yaml
_bmad-output/mcp-v2-upgrade/: .memlog.md  addendum.md  architecture.md  brief.md  epics-mcp-v2-upgrade.md  poc-readiness-report.md  prd.md
_bmad-output/patches/: 3-3-token-counter.md  5-1-subagent-context-injection.md  cli-status-bar.md  deferred-work.md  fr3-mcp-auto-unregister.md  retrospective-engine-p5.md  retrospective-p0-tech-debt.md  spec-cron-stop-timeout.md  spec-deferred-low-cleanup.md  spec-dp4-mcp-result-guard.md  spec-dp4-mcp-safety-guard.md  spec-engine-sandbox-backend.md  spec-mcp-shutdown-timeout.md  spec-sandbox-cancel-signal-preservation.md  spec-sandbox-reap-robustness.md  spec-sandbox-timeout-validation.md
_bmad-output/planning-artifacts/: epics-integration.md  epics-mcp-client.md  epics-self-learning.md
_bmad-output/quality-engineering/: architecture.md  brief.md  epics.md  prd.md  sprint-status.yaml
_bmad-output/robustness-hardening/: ARCHITECTURE-SPINE.md  brief.md  epics.md  prd.md  sprint-status.yaml
_bmad-output/sandbox-hardening/: ARCHITECTURE-SPINE.md  brief.md  epics.md  prd.md  sprint-status.yaml
_bmad/_config/: bmad-help.csv  files-manifest.csv  manifest.yaml  skill-manifest.csv
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml  module-help.csv
_bmad/core/: config.yaml
_bmad/custom/: config.toml
_bmad/gds/: config.yaml  module-help.csv
deploy/: README.md  deploy.sh  heagent.service
docs/: README.md  code-review-2026-07-20.md  code-review-2026-07-23.md  code-review-conclusion.md  design.md  frame.md  gui-plan.md  iteration.md  learning.md  news.md  sprint-status.yaml
docs/architecture-HeAgent-2026-05-23/: architecture.md
docs/brief-HeAgent-2026-05-23/: brief.md
docs/claude-updater/: index.json  latest.md
docs/planning/: epics-mcp-client.md  epics-self-learning.md  epics.md
docs/prd-HeAgent-2026-05-23/: prd.md
docs/stories/: 1-1-project-initialization.md  1-3-configuration-management.md  1-5-openai-provider.md
src/heagent/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  types.py
tests/: conftest.py  test_agent_loop.py  test_benchmarks.py  test_cli.py  test_compressor.py  test_config.py  test_context_loader.py  test_coverage_19_1.py  test_coverage_cron_tools.py  test_coverage_ledger.py  test_coverage_memory_tools.py  test_coverage_persist.py  test_coverage_persist2.py  test_coverage_sandbox.py  test_coverage_search.py  test_coverage_store.py  test_cron.py  test_cron_range.py  test_engine_p0.py  test_exceptions.py  test_file_locking.py  test_file_search.py  test_git_tools.py  test_mcp_cli.py  test_mcp_config.py  test_mcp_github_e2e.py  test_mcp_manager.py  test_mcp_manager_http.py  test_mcp_mapping.py  test_mcp_session_api.py  test_mcp_skeleton.py  test_memory.py  test_provider_switchable.py  test_roles.py  test_run_tree.py  test_safety.py  test_sandbox.py  test_session.py  test_shell.py  test_skill_tools.py  (+12 more)
tests/providers/: test_anthropic.py  test_base.py  test_chain.py  test_key_rotation.py  test_openai.py  test_retry.py
(+517 files in other folders)
