[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heagent"
version = "0.1.0"
description = "A self-improving AI Agent core framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "openai>=2.37",
    "anthropic>=0.104",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff",
    "mypy",
]

[project.scripts]
heagent = "heagent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "no_auto_workspace: do not auto-set workspace root in path safety tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/heagent"]

[tool.mypy]
strict = true
python_version = "3.11"
