[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heagent"
version = "0.1.0"
description = "A self-improving AI Agent core framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "openai>=2.37",
    "anthropic>=0.104",
    "click>=8.0",
    "mcp>=1.28.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff",
    "mypy",
    "pre-commit",
]

[project.scripts]
heagent = "heagent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 默认排除 integration：真实外部依赖 E2E（需凭据/网络）不进全绿基线；
# 显式运行：pytest -m integration
addopts = ["-m", "not integration"]
markers = [
    "no_auto_workspace: do not auto-set workspace root in path safety tests",
    "integration: 真实外部依赖 E2E（需凭据/网络，默认不进基线；显式 `pytest -m integration` 运行）",
]

[tool.hatch.build.targets.wheel]
packages = ["src/heagent"]

[tool.mypy]
strict = true
python_version = "3.11"
