[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "heagent"
version = "0.3.0"
description = "A self-improving AI Agent core framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "HeAgent Contributors" },
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "llm", "self-learning", "mcp", "tool-calling", "openai", "anthropic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.13",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "openai>=2.37",
    "anthropic>=0.104",
    "click>=8.0",
    "mcp>=1.28.1,<2",
]

[project.urls]
Homepage = "https://github.com/zsutxz/HeAgent"
Repository = "https://github.com/zsutxz/HeAgent"
Issues = "https://github.com/zsutxz/HeAgent/issues"
Documentation = "https://github.com/zsutxz/HeAgent/blob/main/docs/README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff",
    "mypy",
    "pre-commit",
    "bandit>=1.7",
    "pip-audit>=2.7",
    "pytest-benchmark>=4.0",
]

[project.scripts]
heagent = "heagent.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# 默认排除 integration + benchmark（真实外部依赖 / 性能基准不进全绿基线）
# 显式运行：pytest -m integration / pytest -m benchmark
addopts = ["-m", "not integration and not benchmark"]
markers = [
    "no_auto_workspace: do not auto-set workspace root in path safety tests",
    "integration: 真实外部依赖 E2E（需凭据/网络，默认不进基线；显式 `pytest -m integration` 运行）",
    "benchmark: 性能基准测试（默认跳过，手动 `pytest -m benchmark` 运行）",
]

[tool.hatch.build.targets.wheel]
packages = ["src/heagent"]

[tool.mypy]
strict = true
python_version = "3.11"

[[tool.mypy.overrides]]
module = [
    "heagent.engine.persist",
    "heagent.tools.sandbox",
]
disallow_untyped_defs = false

# ── Coverage (pytest-cov) ──
# branch = true 启用分支覆盖，更诚实（此前 90% 为纯行覆盖）
[tool.coverage.run]
source = ["src/heagent"]
branch = true
omit = [
    "tests/*",
    "*/venv/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
# 分支覆盖基线 87%；CI 经 --cov-fail-under 读取同一门限
fail_under = 87

# ── Benchmark (pytest-benchmark) ──
[tool.pytest_benchmark]
min_rounds = 5
max_time = 1.0
timer = "time.perf_counter"
storage = "./benchmark-data/"
save = "ci"
autosave = true
